Revision history for Perl module Net::Mosso::CloudFiles:

0.42
    - add Crypt::SSLeay as a dependency as we use SSL for all
      requests

0.41 Tue Mar 17 14:52:50 GMT 2009
    - fix problem with uploading binary data

0.40 Tue Mar 17 11:15:28 GMT 2009
    - Major rewrite to be more like Net::Amazon::S3
    - Use new JSON request for listing objects - adding size, etag,
      content_type and last_modified

0.35 Mon Feb  2 06:10:06 GMT 2009
    - Reauthenticate when the authentication token expires
      (after one hour)
    - Return more than 10,000 objects by issuing multiple calls
      (objects now returns a Data::Stream::Bulk object)
    - Only do 990 keep alive requests per connection
    - Add prefix as an option to objects

0.34 Tue Jan 13 15:37:27 GMT 2009
    - Retry upon errors using LWP::UserAgent::Determined
    - Make all the classes immutable

0.33 Tue Jan 13 09:04:11 GMT 2009
    - Add getting and putting to files
    - Prohibit UTF8 key names
    - Change the default content type from text/plain to 
      application/octet-stream

0.32 Wed Oct 22 23:01:11 BST 2008
	- First release