@@ -105,3 +105,74 @@ sub object {
 }
 
 1;
+
+__END__
+
+=head1 NAME
+
+Net::Mosso::CloudFiles::Container - Represent a Cloud Files container
+
+=head1 DESCRIPTION
+
+This class represents a container in Cloud Files. It is created by
+calling new_container or container on a L<Net::Mosso::CloudFiles> object.
+
+=head1 METHODS
+
+=head2 object_count
+
+Returns the total number of objects in the container:
+
+  my $object_count = $container->object_count;
+
+=head2 bytes_used
+
+Returns the total number of bytes used by objects in the container:
+
+  my $bytes_used = $container->bytes_used;
+
+=head2 objects
+
+Returns a list of objects in the container as
+L<Net::Mosso::CloudFiles::Object> objects. As the API only returns
+ten thousand objects per request, this module may have to do multiple
+requests to fetch all the objects in the container. This is exposed
+by using a L<Data::Stream::Bulk> object. You can also pass in a
+prefix:
+
+  foreach my $object ($container->objects->all) {
+    ...
+  }
+
+  my @objects = $container->objects(prefix => 'dir/')->all;
+
+=head2 object
+
+This returns a <Net::Mosso::CloudFiles::Object> representing
+an object.
+
+  my $xxx = $container->object( name => 'XXX' );
+  my $yyy = $container->object( name => 'YYY', content_type => 'text/plain' );
+
+=head2 delete
+
+Deletes the container, which should be empty:
+
+  $container->delete;
+
+=head1 SEE ALSO
+
+L<Net::Mosso::CloudFiles>, L<Net::Mosso::CloudFiles::Object>.
+
+=head1 AUTHOR
+
+Leon Brocard <acme@astray.com>.
+
+=head1 COPYRIGHT
+
+Copyright (C) 2008-9, Leon Brocard
+
+=head1 LICENSE
+
+This module is free software; you can redistribute it or modify it
+under the same terms as Perl itself.
